--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace gitlab.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://gitlab.com/RaitaroH/YouTube-DeepDark
-@version 3.2.2
+@version 3.2.3
 @updateURL https://gitlab.com/RaitaroH/YouTube-DeepDark/raw/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -3337,5 +3337,26 @@
 		border-color: var(--main-color) !important;
 		color: var(--main-text) !important;
 		opacity: .9;
+	}
+	
+	/*Account sidebar*/
+	ytd-settings-sidebar-renderer
+	{
+		background: var(--second-background) !important;
+	}
+	ytd-compact-link-renderer[compact-link-style="compact-link-style-type-settings-sidebar"][active]
+	{
+		background-color: var(--hover-background) !important;
+	}
+	/*Account > Pages*/
+	#name.ytd-page-introduction-renderer,
+	#name.ytd-channel-options-renderer,
+	ytd-settings-options-renderer .yt-formatted-string:not(a).bold
+	{
+		color: var(--main-text) !important;
+	}
+	ytd-section-list-renderer[page-subtype="account-settings"] a.yt-simple-endpoint.yt-formatted-string
+	{
+		color: var(--main-color) !important;
 	}
 }
