--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace gitlab.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.2.8
+@version 3.2.9
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -946,6 +946,20 @@
 	ytd-single-option-survey-option-renderer:hover
 	{
 		background-color: var(--hover-background) !important;
+	}
+	
+	/*info warning - covid19*/
+	ytd-clarification-renderer
+	{
+		background-color: var(--hover-background) !important;
+	}
+	.text.ytd-clarification-renderer
+	{
+		color: var(--dimmer-text) !important;
+	}
+	.source.ytd-clarification-renderer
+	{
+		color: var(--main-color) !important;
 	}
 
 	/*You are not logged in tooltip*/
