Fix "All messages you send will appear publicly" on livestream chat

--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2255,7 +2255,7 @@
 		background: var(--second-background) !important;
 	}
 	yt-icon.ytd-menu-navigation-item-renderer, yt-icon.ytd-menu-service-item-renderer, #header.yt-live-chat-participant-list-renderer,
-	#author-name.yt-live-chat-author-chip, .style-scope.yt-live-chat-ninja-message-renderer
+	#author-name.yt-live-chat-author-chip, .style-scope.yt-live-chat-ninja-message-renderer, #subtext.yt-live-chat-message-renderer
 	{
 		color: var(--main-text) !important;
 	}
