--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -2,7 +2,7 @@
 @name YouTube DeepDark Material
 @namespace gitlab.com/RaitaroH/YouTube-DeepDark
 @homepageURL https://github.com/RaitaroH/YouTube-DeepDark
-@version 3.3.4
+@version 3.3.5
 @updateURL https://raw.githubusercontent.com/RaitaroH/YouTube-DeepDark/master/YouTubeDeepDarkMaterial.user.css
 @description Videos should only be watched in the dark. May the dark be kinder on thine eyes. (YouTube dark theme)
 @author RaitaroH
@@ -556,13 +556,13 @@
 	{
 		background-color: var(--hover-background) !important;
 	}
-	ytd-feed-filter-chip-bar-renderer[sticky-chips]
+	ytd-feed-filter-chip-bar-renderer
 	{
 		background-color: var(--main-background) !important;
 	}
 	yt-chip-cloud-chip-renderer[chip-style="STYLE_DEFAULT"],
 	yt-chip-cloud-chip-renderer[chip-style="STYLE_HOME_FILTER"],
-	ytd-feed-filter-chip-bar-renderer[sticky-chips]
+	ytd-feed-filter-chip-bar-renderer
 	{
 		border-color: var(--hover-background) !important;
 	}
