--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -54,7 +54,7 @@
 
 ==/UserStyle== */
 
-@-moz-document regexp('https?:\/\/(?!gaming\.)(?!studio\.).*youtube\.com\/(?!premium).*$') {
+@-moz-document regexp('https?:\/\/(?!gaming\.)(?!studio\.).*youtube.*\.com\/(?!premium).*$') {
 	/* Author     : Theme made by RaitaroH */
 	/* Co-authors : https://github.com/MechaLynx https://github.com/MaximeRF */
 	/* Home       : https://github.com/RaitaroH/YouTube-DeepDark */
