damn it youtube

--- a/YouTubeDeepDarkMaterial.user.css
+++ b/YouTubeDeepDarkMaterial.user.css
@@ -572,6 +572,18 @@
 	{
 		background: transparent !important;
 	}
+	#left-arrow-button.ytd-feed-filter-chip-bar-renderer, #right-arrow-button.ytd-feed-filter-chip-bar-renderer
+	{
+		background-color: var(--second-background) !important;
+	}
+	#right-arrow.ytd-feed-filter-chip-bar-renderer::before
+	{
+    background: linear-gradient(to left, var(--second-background) 20%, var(--main-background) 80%);
+	} 
+	#left-arrow.ytd-feed-filter-chip-bar-renderer::after
+	{
+    background: linear-gradient(to left, var(--main-background) 20%, var(--second-background) 80%);
+	}
 	
 	/*Covid19 big posts aka rich shelves*/
 	/*also other borders*/
